--- a/index.html
+++ b/index.html
@@ -6,7 +6,30 @@
 </head>
 
 <body>
-    <a href="ailun.html">ailun</a>
+    <div class="center-container">
+        <a class="center-link" href="" ailun.html"">ailun</a>
+    </div>
+
+    <style>
+        .center-container {
+            display: flex;
+            justify-content: center;
+            /* 水平居中 */
+            align-items: center;
+            /* 垂直居中 */
+            height: 100vh;
+            /* 设置容器高度为视口高度 */
+        }
+
+        .center-link {
+            text-decoration: none;
+            padding: 10px;
+            background-color: #f0f0f0;
+        }
+    </style>
+
+
+
 </body>
 
 </html>
