--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="center-container">
-        <a class="center-link" href="" ailun.html"">ailun</a>
+        <a class="center-link" href="ailun.html">ailun</a>
     </div>
 
     <style>
